# StockTradebyZ

./: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  README.md  Selector.py  backtest.py  configs.json  configs_hk.json  docker-compose.yml  entrypoint.sh  fetch_kline.py  gui_app.py  pyproject.toml  requirements.txt  select_stock.py  start.sh  test.py
data/: 000001.csv  000002.csv  000006.csv  000007.csv  000009.csv  000010.csv  000011.csv  000012.csv  000014.csv  000016.csv  000017.csv  000019.csv  000020.csv  000021.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000034.csv  000035.csv  000036.csv  000037.csv  000039.csv  000050.csv  000055.csv  000056.csv  000058.csv  000059.csv  000060.csv  000061.csv  000062.csv  000063.csv  000065.csv  000066.csv  000068.csv  000069.csv  (+3004 more)
