[project]
name = "stocktradebyz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.17.7",
    "mootdx==0.11.7",
    "numpy==2.3.1",
    "optuna==4.4.0",
    "pandas==2.3.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.0",
    "tqdm==4.66.4",
    "tushare==1.4.21",
]
